# python_aws_lambda_s3

./: .gitignore  README.md  pyproject.toml
learn-terraform-lambda-api-gateway/: .terraform.lock.hcl  access.tf  lambda.tf  main.tf  outputs.tf  s3.tf
learn-terraform-lambda-api-gateway/hello-world/: hello.py
terraform/: .terraform.lock.hcl  access.tf  lambda.tf  outputs.tf  s3.tf
terraform/src/: lambda.py
