
[tool.poetry]
name = "python_aws_lambda_s3"
version = "0.1.0"
description = ""
authors = ["Dan O'Sullivan <dan@osull.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.13"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
